--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,25 @@
-title: Hanlin Cai
-## tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
+title: Renlong WANG
+# tagline: Here is personal website of Renlong WANG. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://Renlong-WANG.github.io 
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  name: Renlong WANG
+  avatar: CVPHOTO.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
-  cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  email: 13127073530@163.com
+  # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  bilibili: 594030035
-  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  zhihu: https://www.zhihu.com/people/chlire
+  # twitter: lancecai2002
+  # github: GuangLun2000
+  # linkedin: hanlincai
+  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  # bilibili: 594030035
+  researchgate: https://www.researchgate.net/profile/Renlong-Wang-2
+  orcid : https://orcid.org/0000-0002-6144-6028
+  # zhihu: https://www.zhihu.com/people/chlire
   # facebook: caihanlin2002
   # instagram: lancecai2002
   # lastfm:
@@ -40,8 +41,12 @@ links:
     url: /
   - title: Publications
     url: /publications/
+  - title: Working Papers
+    url: /workingpapers/
   - title: Awards
     url: /awards/
+  - title: projects
+    url: /projects/
   - title: Teams
     url: /teams/
   - title: Hobbies
