--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,12 @@ url: https://Renlong-WANG.github.io
 
 # Owner/author information
 owner:
-  name: Renlong WANG
-  avatar: CVPHOTO.jpg
+  name: “Renlong WANG”
+  avatar: “CVPHOTO.jpg”
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: 13127073530@163.com
+  bio:"M.S. at University of Chinese Academy of Sciences"
+  location:"Beijing, P.R.China"
+  email: “13127073530@163.com”
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: lancecai2002
