--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
   name: “Renlong WANG”
   avatar: “CVPHOTO.jpg”
   bio: M.S. at University of Chinese Academy of Sciences
-  location:"Beijing, P.R.China"
+  location: Beijing, P.R.China
   email: “13127073530@163.com”
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
