--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url: https://Renlong-WANG.github.io
 
 # Owner/author information
 owner:
-  name: “Renlong WANG”
-  avatar: “CVPHOTO.jpg”
+  name: Renlong WANG
+  avatar: CVPHOTO.jpg
   bio: M.S. at University of Chinese Academy of Sciences
   location: Beijing, P.R.China
   email: “13127073530@163.com”
