--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,9 @@ url: https://Renlong-WANG.github.io
 
 # Owner/author information
 owner:
-  name: “Renlong WANG”
-  avatar: “CVPHOTO.jpg”
-  # bio: Two roads diverged in woods, I took the one less traveled by.
-  bio:"M.S. at University of Chinese Academy of Sciences"
+  name: Renlong WANG
+  avatar: CVPHOTO.jpg
+  bio: M.S. at University of Chinese Academy of Sciences
   location:"Beijing, P.R.China"
   email: “13127073530@163.com”
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
