--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ owner:
   name: Renlong WANG
   avatar: CVPHOTO.jpg
   bio: M.S. at University of Chinese Academy of Sciences
-  location:"Beijing, P.R.China"
-  email: “13127073530@163.com”
+  location: Beijing, P.R.China
+  email: 13127073530@163.com
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: lancecai2002
