--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ owner:
   email: 13127073530@163.com
   # cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  researchgate: https://www.researchgate.net/profile/Renlong-Wang-2
-  orcid : https://orcid.org/0000-0002-6144-6028
+  # researchgate: https://www.researchgate.net/profile/Renlong-Wang-2
+  # orcid : https://orcid.org/0000-0002-6144-6028
   
 
 # Analytics and webmaster tools stuff goes here
