--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://Renlong-WANG.github.io
 
 # Owner/author information
 owner:
-  name: Renlong WANG
+  name: Renlong WANG / Homepapge  
   avatar: CVPHOTO.jpg
   bio: M.S. at University of Chinese Academy of Sciences
   location: Beijing, P.R.China
