--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Renlong WANG
+title: Renlong WANG/Homepapge  
 # tagline: Here is personal website of Renlong WANG. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
@@ -6,7 +6,7 @@ url: https://Renlong-WANG.github.io
 
 # Owner/author information
 owner:
-  name: Renlong WANG/Homepapge  
+  name: Renlong WANG
   avatar: CVPHOTO.jpg
   bio: M.S. at University of Chinese Academy of Sciences
   location: Beijing, P.R.China
