--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 # For external links add external: true
 links:
   - title: About Me
-    url: /
+    url: /index/
   - title: Publications
     url: /publications/
   - title: Conference Presentations
