--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ links:
   - title: Publication
     url: /publications/
   - title: Working Paper
-    url: /publications/
+    url: /workingpaper/
   - title: Conference Presentation
     url: /conference-presentations/
   - title: Award
