--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ links:
     url: /conference-presentations/
   - title: Award
     url: /awards/
-  - title: Vignett
-    url: /vignetts/
+  - title: Vignette
+    url: /vignettes/
 
 
 
