--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 links:
   - title: About Me
     url: /
-  - title: Publication
+  - title: Publication & Preprint
     url: /publications/
-  - title: Working Paper
+  - title: Work-in-Progress
     url: /workingpaper/
   - title: Conference Presentation
     url: /conference-presentations/
