--- a/_config.yml
+++ b/_config.yml
@@ -31,11 +31,11 @@ links:
     url: /
   - title: Publication & Preprint
     url: /publications/
-  - title: Work-in-Progress
+  - title: Working Paper
     url: /workingpaper/
   - title: Conference Presentation
     url: /conference-presentations/
-  - title: Award
+  - title: Award & Honor
     url: /awards/
   - title: Vignette
     url: /vignettes/
