--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ owner:
   bio: M.S. at University of Chinese Academy of Sciences
   location: Beijing, P.R.China
   email: 13127073530@163.com
-  cv: https://Renlong-WANG.github.io/file/[CV] Renlong Wang.pdf
+  # cv: https://Renlong-WANG.github.io/file/[CV] Renlong Wang.pdf
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   # researchgate: https://www.researchgate.net/profile/Renlong-Wang-2
   # orcid : https://orcid.org/0000-0002-6144-6028
